moved hardcaml to lib and added testbench

--- a/day1/bin/dune
+++ b/day1/bin/dune
@@ -1,5 +1,5 @@
 (executable
  (name main)
- (libraries hardcaml hardcaml_waveterm)
+ (libraries hardcaml day1)
  (preprocess
   (pps ppx_hardcaml ppx_sexp_conv)))
